Fixed diplaying nav menu on mobile devices. New prototype pages.

--- a/mybooks3/src/main/resources/static/css/custom.css
+++ b/mybooks3/src/main/resources/static/css/custom.css
@@ -3,6 +3,10 @@ body {
   padding-bottom: 40px;
 }
 
+.jumbotron {
+    margin-top: 20px;
+}
+
 .form-signin {
   max-width: 330px;
   padding: 15px;
